2011-03-17  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Fix an minor issue with shadowing variables.


2011-01-29  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Rename plugin to Tableconvert.
 * Include logic to transform also lists to LaTeX tabular.


2011-01-27  Frank Lanitz  <frlan@frank.uvena.de>

 * Support creation of table with <thead> and <tbody>. Use it for the
   moment as default.


2011-01-26  Frank Lanitz  <frank@frank.uvena.de>

 * Initial Entry. New plugin: HTMLTable.